<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@android:color/black"
        android:drawableStart="@drawable/baseline_dashboard_black_36"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/textNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:background="#aeaeae"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_of_vehicle_n_registered_on_your_name"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:drawableStart="@drawable/baseline_directions_car_black_36"/>

        <TextView
            android:id="@+id/vehicleCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_vehicles"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <TextView
        android:id="@+id/textVehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicles"
        android:textSize="20sp"
        android:layout_below="@+id/textNumber"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textVehicle"
        android:layout_marginStart="15sp"
        android:layout_marginBottom="15sp"
        android:layout_marginEnd="15sp"/>


</RelativeLayout>
