<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_vehicle"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@android:color/black"
        android:drawableStart="@drawable/baseline_directions_car_black_36"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/TextView_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/registration_voucher_number"
        android:layout_below="@id/textView" />



    <EditText
        android:id="@+id/editText_registration_voucher_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:hint="123456789"
        android:layout_below="@id/TextView_registration"/>

    <TextView
        android:id="@+id/noteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_registration_voucher_number"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/registration_note"/>

    <TextView
        android:id="@+id/TextView_deposit_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@android:color/black"
        android:text="@string/bank_deposit_slip_number"
        android:textSize="20sp"
        android:layout_below="@id/noteTextView" />
    <EditText
        android:id="@+id/editText_registration_bank_deposit_slip_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:hint="123456789"
        android:layout_below="@id/TextView_deposit_registration"/>

    <Button
        android:id="@+id/registerRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_registration_bank_deposit_slip_number"
        android:layout_marginTop="15dp"
        android:text="REQUEST"
        android:background="@color/background_color" />

</RelativeLayout>
